--- a/public/404.html
+++ b/public/404.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>404 Page not found - Álvaro Huertas - Blog</title><meta name="Description" content="This is my cool site"><meta property="og:url" content="http://localhost:1313/404.html">
+        <title>404 Page not found - Álvaro Huertas - Blog</title><meta name="Description" content="A personal tech blog by Álvaro sharing insights, tutorials, and reflections on technology and software engineering. Follow the journey of Project B.E.L.E.N (Balanced Efficient Local Ephemeral Nodes), a self-hosted Kubernetes cluster, along with thoughts on modern development, tools, and industry trends."><meta property="og:url" content="http://localhost:1313/404.html">
   <meta property="og:site_name" content="Álvaro Huertas - Blog">
   <meta property="og:title" content="404 Page not found">
-  <meta property="og:description" content="This is my cool site">
+  <meta property="og:description" content="A personal tech blog by Álvaro sharing insights, tutorials, and reflections on technology and software engineering. Follow the journey of Project B.E.L.E.N (Balanced Efficient Local Ephemeral Nodes), a self-hosted Kubernetes cluster, along with thoughts on modern development, tools, and industry trends.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
     <meta property="og:image" content="http://localhost:1313/logo.png">
@@ -15,9 +15,9 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/logo.png">
   <meta name="twitter:title" content="404 Page not found">
-  <meta name="twitter:description" content="This is my cool site">
-<meta name="application-name" content="My cool site">
-<meta name="apple-mobile-web-app-title" content="My cool site">
+  <meta name="twitter:description" content="A personal tech blog by Álvaro sharing insights, tutorials, and reflections on technology and software engineering. Follow the journey of Project B.E.L.E.N (Balanced Efficient Local Ephemeral Nodes), a self-hosted Kubernetes cluster, along with thoughts on modern development, tools, and industry trends.">
+<meta name="application-name" content="Álvaro Huertas - Blog">
+<meta name="apple-mobile-web-app-title" content="Álvaro Huertas - Blog">
 <meta name="referrer" content="no-referrer" /><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="http://localhost:1313/404.html" /><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="/lib/fontawesome-free/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -28,7 +28,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="Álvaro Huertas - Blog"></a>
+            <a href="/" title="Álvaro Huertas - Blog">Álvaro Huertas - Blog</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> Posts </a><a class="menu-item" href="/tags/"> Tags </a><a class="menu-item" href="/categories/"> Categories </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -44,6 +44,9 @@
                         </span>
                     </span><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
+                </a><a href="javascript:void(0);" class="menu-item language" title="Select Language">
+                    <i class="fa fa-globe fa-fw" aria-hidden="true"></i>                      
+                    <select class="language-select" id="language-select-desktop" onchange="location = this.value;"><option value="/404.html" selected>English</option><option value="/es/404.html">Español</option></select>
                 </a></div>
         </div>
     </div>
@@ -51,7 +54,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="Álvaro Huertas - Blog"></a>
+                <a href="/" title="Álvaro Huertas - Blog">Álvaro Huertas - Blog</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -75,7 +78,10 @@
                     </a>
                 </div><a class="menu-item" href="/posts/" title="">Posts</a><a class="menu-item" href="/tags/" title="">Tags</a><a class="menu-item" href="/categories/" title="">Categories</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
-            </a></div>
+            </a><a href="javascript:void(0);" class="menu-item" title="Select Language">
+                    <i class="fa fa-globe fa-fw" aria-hidden="true"></i>
+                    <select class="language-select" onchange="location = this.value;"><option value="/404.html" selected>English</option><option value="/es/404.html">Español</option></select>
+                </a></div>
     </div>
 </header><div class="search-dropdown desktop">
         <div id="search-dropdown-desktop"></div>
@@ -97,7 +103,7 @@
     </script></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.145.0">Hugo</a> | Theme - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.3.1-DEV"><i class="far fa-kiss-wink-heart fa-fw" aria-hidden="true"></i> LoveIt</a>
-                </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2019 - 2025</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">xxxx</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
+                </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2025</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://www.linkedin.com/in/alvarohuertasdiaz/" target="_blank">Álvaro Huertas Díaz</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
         </div>
     </footer></div>
 
